Services/sleeq-jenkins-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sleeq-jenkins-service
  namespace: default
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   "/jenkins"
      prometheus.io/port:   '8080'
spec:
  selector: 
    app: sleeq-jenkins
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
