Services/sleeq-mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sleeq-mongo
  name: sleeq-mongo-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: sleeq-mongo
