Services/sleeq-mongodb-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: sleeq-mongodb
  labels: 
    app: sleeq-mongodb
spec: 
  ports: 
    - 
      name: mongodb
      port: 27017
      nodePort: 30332
  type: NodePort
  selector: 
    app: sleeq-mongodb
