Services/sleeq-mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sleeq-mysql-service
spec:
  type: ClusterIP
  selector:
    app: sleeq-mysql
  ports:
  - name: sleeq-mysql-service-port
    port: 3306
    targetPort: 3306
