Services/sleeq-ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sleeq-ingress
  namespace: default
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  rules:
  # - host: "hello-sleeq.sev"
  - http:
      paths:
      - path: "/api"
        pathType: Prefix
        backend:
          service:
            name: sleeq-api-service
            port:
              number: 80

      - path: "/jenkins"
        pathType: Prefix
        backend:
          service:
            name: sleeq-jenkins-service
            port:
              number: 8080

      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: sleeq-site-service
            port:
              number: 80
